[package]
name = "async_jg_proxies_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["socks"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
sqlx = { version = "0.7.3", features = ["chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
